# Content_Based_Image_Retrieval_Using_LSH

./: .gitignore  CMakeLists.txt  README.md
cpp/: CMakeLists.txt
cpp/bindings/: bindings.cpp
cpp/include/lsh/: VectorDB.h
cpp/src/: VectorDB.cpp
python/: requirements.txt  server.py  visualization.py
python/data/: metadata.json
python/feature_extractor/: feature_extractor.py
python/scripts/: benchmark.py  bulk_index.py
ui_react/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui_react/src/: App.jsx  index.css
